test/fixtures/fixtures/type-error/typeError.lys.ast.desugar
|-Document(0,21)
  |-(AstCons)
    |-FunctionDirective(1,21)
      |-(AstCons)
        |-Decorators(1,1)
          <Rule0>
        |-(AstCons)
          |-NoModifier(1,1)
            <Rule0>
          |-FunDeclaration(1,21)
            |-(AstCons)
              |-NameIdentifier(5,6)
                |-Identifier=x
              |-(AstCons)
                |-TypeParameters(6,6)
                  <Rule0>
                |-(AstCons)
                  |-FunctionParamsList(6,8)
                    |-(List)(7,7)
                      <Rule0>
                  |-(AstCons)
                    |-ReturnType(8,14)
                      |-Reference(10,13)
                        |-QName(10,13)
                          |-NameIdentifier(10,13)
                            |-Identifier=i32
                    |-FunctionBody(14,21)
                      |-BooleanLiteral(16,21)
                        <Rule0>
    |-EndOfFile=